VKBootstrap/source/CVkBootstrap.h

enum class VkbPhysicalDeviceError {
    NONE,
    NO_SURFACE_PROVIDED,
    FAILED_ENUMERATE_PHYSICAL_DEVICES,
    NO_PHYSICAL_DEVICES_FOUND,
    NO_SUITABLE_DEVICE,
};
    // This will return a slice or array view.
    EXPORT void get_available_extensions(VkbSystemInfo system_info, VkExtensionProperties** data, size_t* length);
    // Sets the void* to use in the debug messenger - only useful with a custom callback
    EXPORT void set_debug_callback_user_data_pointer(VkbInstanceBuilder builder, void* user_data_pointer);
    // Set what message severity is needed to trigger the callback.
    EXPORT void set_debug_messenger_severity(VkbInstanceBuilder builder, VkDebugUtilsMessageSeverityFlagsEXT severity);
    // Add a message severity to the list that triggers the callback.
    EXPORT void add_debug_messenger_severity(VkbInstanceBuilder builder, VkDebugUtilsMessageSeverityFlagsEXT severity);
    // Set what message type triggers the callback.
    EXPORT void set_debug_messenger_type(VkbInstanceBuilder builder, VkDebugUtilsMessageTypeFlagsEXT type);
    // Add a message type to the list of that triggers the callback.
    EXPORT void add_debug_messenger_type(VkbInstanceBuilder builder, VkDebugUtilsMessageTypeFlagsEXT type);
    // Disable some validation checks.
    // Checks: All, and Shaders
    EXPORT void add_validation_disable(VkbInstanceBuilder builder, VkValidationCheckEXT check);
    // Enables optional parts of the validation layers.
    // Parts: best practices, gpu assisted, and gpu assisted reserve binding slot.
    EXPORT void add_validation_feature_enable(VkbInstanceBuilder builder, VkValidationFeatureEnableEXT enable);
    // Disables sections of the validation layers.
    // Options: All, shaders, thread safety, api parameters, object lifetimes, core checks, and unique handles.
    EXPORT void add_validation_feature_disable(VkbInstanceBuilder builder, VkValidationFeatureDisableEXT disable);
    // Provide custom allocation callbacks.
    EXPORT void set_allocation_callbacks(VkbInstanceBuilder builder, VkAllocationCallbacks* callbacks);
    EXPORT void get_name(VkbPhysicalDevice pdevice, const char** data, size_t* length);
    EXPORT VkPhysicalDevice get_vk_physical_device(VkbPhysicalDevice pdevice);
    
    EXPORT VkPhysicalDeviceFeatures get_vk_device_features(VkbPhysicalDevice pdevice);
    EXPORT VkPhysicalDeviceProperties get_vk_device_properties(VkbPhysicalDevice pdevice);
    EXPORT VkPhysicalDeviceMemoryProperties get_vk_device_memory_properties(VkbPhysicalDevice pdevice);
    
    // Has a queue family that supports compute operations but not graphics nor transfer.
    EXPORT bool has_dedicated_compute_queue(VkbPhysicalDevice pdevice);
    // Has a queue family that supports transfer operations but not graphics nor compute.
    EXPORT bool has_dedicated_transfer_queue(VkbPhysicalDevice pdevice);
    // Has a queue family that supports transfer operations but not graphics.
    EXPORT bool has_separate_compute_queue(VkbPhysicalDevice pdevice);
    // Has a queue family that supports transfer operations but not graphics.
    EXPORT bool has_separate_transfer_queue(VkbPhysicalDevice pdevice);
    // Advanced: Get the VkQueueFamilyProperties of the device if special queue setup is needed
    EXPORT void get_queue_families(VkbPhysicalDevice pdevice, VkQueueFamilyProperties** data, size_t* length);
    // Query the list of extensions which should be enabled
    // Note: string_lengths and array_data allocates with malloc(), this leaves the caller 
    // responsible to free the memory.
    EXPORT void get_extensions(VkbPhysicalDevice pdevice, const char*** array_data, size_t* array_length, size_t** string_lengths);
    // Query the list of extensions which the physical device supports
    // Note: string_lengths and array_data allocates with malloc(), this leaves the caller 
    // responsible to free the memory.
    EXPORT void get_available_extensions(VkbPhysicalDevice pdevice, const char*** array_data, size_t* array_length, size_t** string_lengths);
    // Returns true if an extension should be enabled on the device
    EXPORT bool is_extension_present(VkbPhysicalDevice pdevice, const char* extension);
    // If the given extension is present, make the extension be enabled on the device.
    // Returns true the extension is present.
    EXPORT bool enable_extension_if_present(VkbPhysicalDevice pdevice, const char* extension);
 // namespace VkbPhysicalDeviceFunctions

enum class VkbPreferredDeviceType {
    OTHER = 0,
    INTEGRATED = 1,
    DISCRETE = 2,
    VIRTUAL_GPU = 3,
    CPU = 4,
};
enum class VkbDeviceSelectionMode {
    // return all suitable and partially suitable devices
    PARTIALLY_AND_FULLY_SUITABLE,
    // return only physical devices which are fully suitable
    ONLY_FULLY_SUITABLE,  
};
    EXPORT VkbPhysicalDeviceSelector make_physical_device_selector(VkbInstance instance);
    EXPORT VkbPhysicalDeviceSelector make_physical_device_selector(VkbInstance instance, VkSurfaceKHR surface);
    EXPORT void delete_physical_device_selector(VkbPhysicalDeviceSelector* selector);
    
    // Return the first device which is suitable
    // use the `selection` parameter to configure if partially
    EXPORT VkbPhysicalDeviceError select(VkbPhysicalDeviceSelector selector, VkbPhysicalDevice* result, VkbDeviceSelectionMode selection = VkbDeviceSelectionMode::PARTIALLY_AND_FULLY_SUITABLE);
    
     // Return all devices which are considered suitable - intended for applications which want to let the user pick the physical device
    EXPORT VkbPhysicalDeviceError select_devices(VkbPhysicalDeviceSelector selector, VkbPhysicalDevice** results, size_t* length, VkbDeviceSelectionMode selection = VkbDeviceSelectionMode::PARTIALLY_AND_FULLY_SUITABLE);
    EXPORT void get_queue_families(VkbDevice device, VkQueueFamilyProperties** queue_families, size_t* length);
    

    EXPORT void set_allocation_callbacks(VkbDeviceBuilder builder, VkAllocationCallbacks* callbacks);
    // Provide custom allocation callbacks.
    EXPORT void set_allocation_callbacks(VkbSwapchainBuilder builder, VkAllocationCallbacks* callbacks);
 // namespace VkbSwapchainBuilderFunctions

// A quick little c wrapper to help remove any allocated memory.
EXPORT void _vkb_impl_c_free(void* data);