VKBootstrap/modified_generated_windows.jai


    // Sets the void* to use in the debug messenger - only useful with a custom callback
    set_debug_callback_user_data_pointer :: (builder: InstanceBuilder, user_data_pointer: *void) -> void #foreign libvkbootstrap "?set_debug_callback_user_data_pointer@VkbInstanceBuilderFunctions@@YAXPEAUVkbInstanceBuilder_T@@PEAX@Z";

    // Set what message severity is needed to trigger the callback.
    set_debug_messenger_severity :: (builder: InstanceBuilder, severity: VkDebugUtilsMessageSeverityFlagsEXT) -> void #foreign libvkbootstrap "?set_debug_messenger_severity@VkbInstanceBuilderFunctions@@YAXPEAUVkbInstanceBuilder_T@@I@Z";

    // Add a message severity to the list that triggers the callback.
    add_debug_messenger_severity :: (builder: InstanceBuilder, severity: VkDebugUtilsMessageSeverityFlagsEXT) -> void #foreign libvkbootstrap "?add_debug_messenger_severity@VkbInstanceBuilderFunctions@@YAXPEAUVkbInstanceBuilder_T@@I@Z";

    // Set what message type triggers the callback.
    set_debug_messenger_type :: (builder: InstanceBuilder, type: VkDebugUtilsMessageTypeFlagsEXT) -> void #foreign libvkbootstrap "?set_debug_messenger_type@VkbInstanceBuilderFunctions@@YAXPEAUVkbInstanceBuilder_T@@I@Z";

    // Add a message type to the list of that triggers the callback.
    add_debug_messenger_type :: (builder: InstanceBuilder, type: VkDebugUtilsMessageTypeFlagsEXT) -> void #foreign libvkbootstrap "?add_debug_messenger_type@VkbInstanceBuilderFunctions@@YAXPEAUVkbInstanceBuilder_T@@I@Z";

    // Disable some validation checks.
    // Checks: All, and Shaders
    add_validation_disable :: (builder: InstanceBuilder, check: VkValidationCheckEXT) -> void #foreign libvkbootstrap "?add_validation_disable@VkbInstanceBuilderFunctions@@YAXPEAUVkbInstanceBuilder_T@@W4VkValidationCheckEXT@@@Z";

    // Enables optional parts of the validation layers.
    // Parts: best practices, gpu assisted, and gpu assisted reserve binding slot.
    add_validation_feature_enable :: (builder: InstanceBuilder, enable: VkValidationFeatureEnableEXT) -> void #foreign libvkbootstrap "?add_validation_feature_enable@VkbInstanceBuilderFunctions@@YAXPEAUVkbInstanceBuilder_T@@W4VkValidationFeatureEnableEXT@@@Z";

    // Disables sections of the validation layers.
    // Options: All, shaders, thread safety, api parameters, object lifetimes, core checks, and unique handles.
    add_validation_feature_disable :: (builder: InstanceBuilder, disable: VkValidationFeatureDisableEXT) -> void #foreign libvkbootstrap "?add_validation_feature_disable@VkbInstanceBuilderFunctions@@YAXPEAUVkbInstanceBuilder_T@@W4VkValidationFeatureDisableEXT@@@Z";

    // Provide custom allocation callbacks.
    set_allocation_callbacks :: (builder: InstanceBuilder, callbacks: *VkAllocationCallbacks) -> void #foreign libvkbootstrap "?set_allocation_callbacks@VkbInstanceBuilderFunctions@@YAXPEAUVkbInstanceBuilder_T@@PEAUVkAllocationCallbacks@@@Z";

PhysicalDevice_T :: struct {}
PhysicalDevice :: *PhysicalDevice_T;

// PhysicalDeviceFunctions
    get_name :: (pdevice: PhysicalDevice, data: **u8, length: *u64) -> void #foreign libvkbootstrap "?get_name@VkbPhysicalDeviceFunctions@@YAXPEAUVkbPhysicalDevice_T@@PEAPEBDPEA_K@Z";
    get_name :: inline (pdevice: PhysicalDevice) -> string #no_context {
        result: string = ---;
        length: u64 = ---;
        get_name(pdevice, *result.data, *length);
        result.count = xx length;
        return result;
    }
        
    get_vk_physical_device :: (pdevice: PhysicalDevice) -> VkPhysicalDevice #foreign libvkbootstrap "?get_vk_physical_device@VkbPhysicalDeviceFunctions@@YAPEAUVkPhysicalDevice_T@@PEAUVkbPhysicalDevice_T@@@Z";

    get_vk_device_features :: (pdevice: PhysicalDevice) -> VkPhysicalDeviceFeatures #foreign libvkbootstrap "?get_vk_device_features@VkbPhysicalDeviceFunctions@@YA?AUVkPhysicalDeviceFeatures@@PEAUVkbPhysicalDevice_T@@@Z";
    get_vk_device_properties :: (pdevice: PhysicalDevice) -> VkPhysicalDeviceProperties #foreign libvkbootstrap "?get_vk_device_properties@VkbPhysicalDeviceFunctions@@YA?AUVkPhysicalDeviceProperties@@PEAUVkbPhysicalDevice_T@@@Z";
    get_vk_device_memory_properties :: (pdevice: PhysicalDevice) -> VkPhysicalDeviceMemoryProperties #foreign libvkbootstrap "?get_vk_device_memory_properties@VkbPhysicalDeviceFunctions@@YA?AUVkPhysicalDeviceMemoryProperties@@PEAUVkbPhysicalDevice_T@@@Z";

    // Has a queue family that supports compute operations but not graphics nor transfer.
    has_dedicated_compute_queue :: (pdevice: PhysicalDevice) -> bool #foreign libvkbootstrap "?has_dedicated_compute_queue@VkbPhysicalDeviceFunctions@@YA_NPEAUVkbPhysicalDevice_T@@@Z";

    // Has a queue family that supports transfer operations but not graphics nor compute.
    has_dedicated_transfer_queue :: (pdevice: PhysicalDevice) -> bool #foreign libvkbootstrap "?has_dedicated_transfer_queue@VkbPhysicalDeviceFunctions@@YA_NPEAUVkbPhysicalDevice_T@@@Z";

    // Has a queue family that supports transfer operations but not graphics.
    has_separate_compute_queue :: (pdevice: PhysicalDevice) -> bool #foreign libvkbootstrap "?has_separate_compute_queue@VkbPhysicalDeviceFunctions@@YA_NPEAUVkbPhysicalDevice_T@@@Z";

    // Has a queue family that supports transfer operations but not graphics.
    has_separate_transfer_queue :: (pdevice: PhysicalDevice) -> bool #foreign libvkbootstrap "?has_separate_transfer_queue@VkbPhysicalDeviceFunctions@@YA_NPEAUVkbPhysicalDevice_T@@@Z";

    // Advanced: Get the VkQueueFamilyProperties of the device if special queue setup is needed
    get_queue_families :: (pdevice: PhysicalDevice, data: **VkQueueFamilyProperties, length: *u64) -> void #foreign libvkbootstrap "?get_queue_families@VkbPhysicalDeviceFunctions@@YAXPEAUVkbPhysicalDevice_T@@PEAPEAUVkQueueFamilyProperties@@PEA_K@Z";
    get_queue_families :: inline (pdevice: PhysicalDevice) -> []VkQueueFamilyProperties #no_context {
        result: []VkQueueFamilyProperties = ---;
        length: u64 = ---;
        get_queue_families(pdevice, *result.data, *length);
        result.count = xx length;
        return result;
    }

    // Query the list of extensions which should be enabled
    // Note: string_lengths and array_data allocates with malloc(), this leaves the caller
    // responsible to free the memory.
    get_extensions :: (pdevice: PhysicalDevice, array_data: ***u8, array_length: *u64, string_lengths: **u64) -> void #foreign libvkbootstrap "?get_extensions@VkbPhysicalDeviceFunctions@@YAXPEAUVkbPhysicalDevice_T@@PEAPEAPEBDPEA_KPEAPEA_K@Z";
    
    // The only thing needing to be deleted is the slice. The
    // strings are fine on their own.
    get_extensions :: inline (pdevice: PhysicalDevice) -> []string {
        array_data: **u8 = ---;
        array_length: u64 = ---;
        string_lengths: *u64 = ---;
        
        get_extensions(pdevice, *array_data, *array_length, *string_lengths);
        defer _vkb_impl_c_free(array_data);
        defer _vkb_impl_c_free(string_lengths);
        
        result := NewArray(xx array_length, string);
        
        for i : 0..array_length-1 {
            str := *result[i];
            str.data = array_data[i];
            str.count = xx string_lengths[i];      
        }
        
        return result;
    }

    // Query the list of extensions which the physical device supports
    // Note: string_lengths and array_data allocates with malloc(), this leaves the caller
    // responsible to free the memory.
    get_available_extensions :: (pdevice: PhysicalDevice, array_data: ***u8, array_length: *u64, string_lengths: **u64) -> void #foreign libvkbootstrap "?get_available_extensions@VkbPhysicalDeviceFunctions@@YAXPEAUVkbPhysicalDevice_T@@PEAPEAPEBDPEA_KPEAPEA_K@Z";
    get_available_extensions :: inline (pdevice: PhysicalDevice) -> []string {
        array_data: **u8 = ---;
        array_length: u64 = ---;
        string_lengths: *u64 = ---;
        
        get_available_extensions(pdevice, *array_data, *array_length, *string_lengths);
        defer _vkb_impl_c_free(array_data);
        defer _vkb_impl_c_free(string_lengths);
        
        result := NewArray(xx array_length, string);
        
        for i : 0..array_length-1 {
            str := *result[i];
            str.data = array_data[i];
            str.count = xx string_lengths[i];      
        }
        
        return result;
    }

    // Returns true if an extension should be enabled on the device
    is_extension_present :: (pdevice: PhysicalDevice, extension: *u8) -> bool #foreign libvkbootstrap "?is_extension_present@VkbPhysicalDeviceFunctions@@YA_NPEAUVkbPhysicalDevice_T@@PEBD@Z";

    // If the given extension is present, make the extension be enabled on the device.
    // Returns true the extension is present.
    enable_extension_if_present :: (pdevice: PhysicalDevice, extension: *u8) -> bool #foreign libvkbootstrap "?enable_extension_if_present@VkbPhysicalDeviceFunctions@@YA_NPEAUVkbPhysicalDevice_T@@PEBD@Z";

PreferredDeviceType :: enum s32 {
    OTHER       :: 0;
    INTEGRATED  :: 1;
    DISCRETE    :: 2;
    VIRTUAL_GPU :: 3;
    CPU         :: 4;
}

DeviceSelectionMode :: enum s32 {
    PARTIALLY_AND_FULLY_SUITABLE :: 0;

    ONLY_FULLY_SUITABLE          :: 1;
}

PhysicalDeviceSelector_T :: struct {}
PhysicalDeviceSelector :: *PhysicalDeviceSelector_T;

// PhysicalDeviceSelectorFunctions
    make_physical_device_selector :: (instance: Instance) -> PhysicalDeviceSelector #foreign libvkbootstrap "?make_physical_device_selector@VkbPhysicalDeviceSelectorFunctions@@YAPEAUVkbPhysicalDeviceSelector_T@@PEAUVkbInstance_T@@@Z";
    make_physical_device_selector :: (instance: Instance, surface: VkSurfaceKHR) -> PhysicalDeviceSelector #foreign libvkbootstrap "?make_physical_device_selector@VkbPhysicalDeviceSelectorFunctions@@YAPEAUVkbPhysicalDeviceSelector_T@@PEAUVkbInstance_T@@PEAUVkSurfaceKHR_T@@@Z";
    delete_physical_device_selector :: (selector: *PhysicalDeviceSelector) -> void #foreign libvkbootstrap "?delete_physical_device_selector@VkbPhysicalDeviceSelectorFunctions@@YAXPEAPEAUVkbPhysicalDeviceSelector_T@@@Z";

    // Return the first device which is suitable
    // use the `selection` parameter to configure if partially
    select :: (selector: PhysicalDeviceSelector, result: *PhysicalDevice, selection: DeviceSelectionMode = .PARTIALLY_AND_FULLY_SUITABLE) -> PhysicalDeviceError #foreign libvkbootstrap "?select@VkbPhysicalDeviceSelectorFunctions@@YA?AW4VkbPhysicalDeviceError@@PEAUVkbPhysicalDeviceSelector_T@@PEAPEAUVkbPhysicalDevice_T@@W4VkbDeviceSelectionMode@@@Z";
    select :: inline (selector: PhysicalDeviceSelector, selection: DeviceSelectionMode = .PARTIALLY_AND_FULLY_SUITABLE) -> PhysicalDevice, PhysicalDeviceError #no_context {
        result: PhysicalDevice = ---;
        error := select(selector, *result, selection);
        return result, error;
    }
    
    // Return all devices which are considered suitable - intended for applications which want to let the user pick the physical device
    select_devices :: (selector: PhysicalDeviceSelector, results: **PhysicalDevice, length: *u64, selection: DeviceSelectionMode = .PARTIALLY_AND_FULLY_SUITABLE) -> PhysicalDeviceError #foreign libvkbootstrap "?select_devices@VkbPhysicalDeviceSelectorFunctions@@YA?AW4VkbPhysicalDeviceError@@PEAUVkbPhysicalDeviceSelector_T@@PEAPEAPEAUVkbPhysicalDevice_T@@PEA_KW4VkbDeviceSelectionMode@@@Z";

    // Note: Will need to delete the slice as well as all the individual physical devices 
    select_devices :: inline (selector: PhysicalDeviceSelector, selection: DeviceSelectionMode = .PARTIALLY_AND_FULLY_SUITABLE) -> []PhysicalDevice, PhysicalDeviceError {
        physical_device_results: *PhysicalDevice = ---;
        length: u64 = ---;
        error := select_devices(selector, *physical_device_results, *length, selection);
        defer _vkb_impl_c_free(physical_device_results);
        
        result := NewArray(xx length, PhysicalDevice);
